# akamai-cli-network-lists

./: .gitignore  README.md  cli.json  pyproject.toml  requirements.txt
src/akamai_network_lists/: __init__.py  network_lists_api_wrapper.py
