[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akamai-network-lists"
version = "0.0.1"
authors = [
  { name="Ryan", email="" },
]
description = "An Akamai CLI package for interacting with the Network Lists API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.7",
    "edgegrid-python==1.3.1",
    "requests>=2.25.1,<3.0",
]

[project.scripts]
akamai-network-lists = "akamai_network_lists:main"

[project.urls]
Homepage = "https://github.com/tbd"
Issues = "https://github.com/tbd/issues"