[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akamai-network-lists"
version = "0.0.4"
authors = [
  { name="Ryan", email="ryan.linnit@sky.uk" },
]
description = "An Akamai CLI package for interacting with the Network Lists API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.7",
    "edgegrid-python==1.3.1",
    "requests>=2.25.1,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/akamai_network_lists"]

[project.urls]
Homepage = "https://github.com/ryanlinnit-sky/akamai-cli-network-lists"
Issues = "https://github.com/ryanlinnit-sky/akamai-cli-network-lists/issues"